hide other pages

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,7 +14,7 @@ description: 'Tap into the power of Easy Street Offers marketplace via API.'
   alt="Hero Dark"
 />
 
-## Setting up
+{/* ## Setting up
 
 The first step to world-class documentation is setting up your editing environments.
 
@@ -68,4 +68,4 @@ Update your docs to your brand and add valuable content for the best user conver
   >
     Check out our showcase of our favorite documentation
   </Card>
-</CardGroup>
+</CardGroup> */}
