--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -3,14 +3,11 @@ title: 'Introduction'
 description: 'Request and manage your cash offers here.'
 ---
 
-<Note>
-  ESO API is currently in beta. If you have any feedback, please [email us](mailto:kevin@easystreetoffers.com).
-</Note>
 
-## Welcome
 
-To get started, register an account on our [website](https://v2.easystreetoffers.com/auth/signup). Once completed, [reach out](mailto:kevin@easystreetoffers.com) to us to obtain an API key.
-If you want to jump right in, you can go straight to our playground:
+To get started, register an account on our [website](https://v2.easystreetoffers.com/auth/signup). Once completed, [reach out](mailto:tyler@easystreetoffers.com) to us to obtain an API key.
+After signing our API License agreement, you will be able to access our API.
+Check out our [quick start guide](/buyer-quickstart.mdx). If you want to jump right in, you can go straight to our playground:
 
 <Card
   title="ESO API Playground"
@@ -19,3 +16,7 @@ If you want to jump right in, you can go straight to our playground:
 >
   View the OpenAPI specification file
 </Card>
+
+<Note>
+  ESO API is currently in beta. If you have any feedback, please [email us](mailto:kevin@easystreetoffers.com).
+</Note>
