--- a/broker-quickstart.mdx
+++ b/broker-quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: 'Broker Quickstart'
+description: 'Request cash offers in under 10 minutes'
 ---
 
 ## Setup your development
