--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Tap into the power of Easy Street Offers marketplace via API.'
+description: 'Unlock the power of cash offers programmatically'
 ---
 
 <img
@@ -13,59 +13,12 @@ description: 'Tap into the power of Easy Street Offers marketplace via API.'
   src="/images/hero-dark.svg"
   alt="Hero Dark"
 />
+## Obtaining access
+With great power comes great responsibility, so we must review and grant access individually. After you complete the relevant agreements,
+we will provide you with an API key. Check out our [buyer](/buyer-quickstart) or [broker](/broker-quickstart) quickstart guide. You can 
 
-{/* ## Setting up
+## Development & Support
+You can start testing the endpoint without ever leaving this documentation page. Simply head to our [playground](/api-reference/endpoint/get-offer-requests) to enter your API key
+ and start making API calls.
 
-The first step to world-class documentation is setting up your editing environments.
-
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup> */}
+You can email us at [kevin@easystreetoffers.com](kevin@easystreetoffers.com) for support. Check out our [discord](https://discord.gg/PWDTzE8p) to see what other developers are doing.
