--- a/broker-quickstart.mdx
+++ b/broker-quickstart.mdx
@@ -1,86 +1,73 @@
 ---
 title: 'Broker Quickstart'
-description: 'Request cash offers in under 10 minutes'
+description: 'Start bulk request cash offers within a day'
 ---
 
-## Setup your development
+## Make your first request for cash offers
+To make your first request for cash offers, you can make a POST request to the `/offer-requests` endpoint:
+```curl
+curl --request POST \
+  --url https://v2.easystreetoffers.com/api/v2/offer-requests \
+  --header 'Authorization: <api-key>' \
+  --header 'Content-Type: application/json' \
+  --data '{
+  "request": {
+    "offer_request_asking": 3900000,
+    "test": true
+  },
+  "property": {
+    "StreetNumber": "123",
+    "StreetName": "Easy St",
+    "City": "Easy",
+    "StateOrProvince": "CA",
+    "PostalCode": "12345",
+    "UnitNumber": "1",
+    "Stories": 1,
+    "BedroomsTotal": 3,
+    "BathroomsFull": 3,
+    "BathroomsHalf": 0,
+    "YearBuilt": 1951,
+    "Longitude": -121.999418,
+    "Latitude": 37.8450264,
+    "LivingArea": 2400,
+    "ListPrice": 2654000,
+    "MlsStatus": "Off-market",
+    "Notes": "",
+    "Sewer": [
+      "Public Sewer"
+    ],
+    "SpaYN": false,
+    "GarageYN": true,
+    "CarportYN": false,
+    "BasementYN": false,
+    "WaterSource": [
+      "Public"
+    ],
+    "GarageSpaces": 1,
+    "OccupantType": "Owner",
+    "OtherParking": "Attached",
+    "AssociationYN": true,
+    "OpenParkingYN": false,
+    "PoolPrivateYN": false,
+    "AssociationFee": 0,
+    "StandardStatus": "Off Market",
+    "LivingAreaUnits": "Square Feet",
+    "PropertySubType": "Single Family Residence",
+    "AttachedGarageYN": false,
+    "LotSizeSquareFeet": 21000,
+    "SeniorCommunityYN": false,
+    "inventory_password": 573923,
+    "PowerProductionType": "",
+    "ConstructionMaterials": [
+      "Wood Framing"
+    ],
+    "AssociationFeeFrequency": "Monthly"
+  },
+  "media": [
+    "https://picsum.photos/200"
+  ]
+}'
+```
 
-Learn how to update your docs locally and and deploy them to the public.
+<Note>Fields named with Pascal Case convention follow the [RESO 2.0](https://ddwiki.reso.org/display/DDW20/Data+Dictionary+2.0+Wiki) standard. Please reference the Wiki before inquiring about field definitions</Note>
 
-### Edit and preview
-
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
-  </Accordion>
-</AccordionGroup>
-
-### Deploy your changes
-
-<AccordionGroup>
-
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
-
-</AccordionGroup>
-
-## Update your docs
-
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
-
-<CardGroup>
-
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
-
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
-
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
-
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
-
-</CardGroup>
