--- a/broker-quickstart.mdx
+++ b/broker-quickstart.mdx
@@ -71,3 +71,4 @@ curl --request POST \
 
 <Note>Fields named with Pascal Case convention follow the [RESO 2.0](https://ddwiki.reso.org/display/DDW20/Data+Dictionary+2.0+Wiki) standard. Please reference the Wiki before inquiring about field definitions</Note>
 
+## Viewing your cash offers
