--- a/introduction.mdx
+++ b/introduction.mdx
@@ -15,7 +15,7 @@ description: 'Unlock the power of cash offers programmatically'
 />
 ## Obtaining access
 With great power comes great responsibility, so we must review and grant access individually. After you complete the relevant agreements,
-we will provide you with an API key. Check out our [buyer](/buyer-quickstart) or [broker](/broker-quickstart) quickstart guide. You can 
+we will provide you with an API key. Check out our [buyer](/buyer-quickstart) or [broker](/broker-quickstart) quickstart guide.
 
 ## Development & Support
 You can start testing the endpoint without ever leaving this documentation page. Simply head to our [playground](/api-reference/endpoint/get-offer-requests) to enter your API key
