--- a/broker-quickstart.mdx
+++ b/broker-quickstart.mdx
@@ -102,6 +102,32 @@ If successful, you will receive the following response:
 
 You've just submitted your first Cash Offer Request! You can use the offer_request_id to identify it in your system & view the current status of your request.
 
+## Preliminary Request
+
+Not ready to submit a full request yet? You can also check out how many buyers and buy boxes a property matches by hitting the preliminary request endpoint:
+
+```curl
+curl --location 'https://v2.easystreetoffers.com/api/v2/offer-requests/prelim' \
+--header 'Content-Type: application/json' \
+--header 'Authorization: eso_altlx0pb8sqy27wdta1aqbh8ta7p0jw4avvoka6geknqhbex32ly62nofprremvu6azrwl3iktry4oyrxn2yng' \
+--data '{
+    "inventory": {
+        "StateOrProvince": "CA",
+        "PostalCode":"94507",
+        "BedroomsTotal": 3,
+        "BathroomsFull": 2,
+        "LivingArea": 2650,
+        "LotSizeSquareFeet": 6000,
+        "ParkingTotal": 2,
+        "YearBuilt": 1990,
+        "ListPrice": 250000,
+        "OccupantType": "Owner",
+        "PoolPrivateYN": false,
+        "StandardStatus": "Off-market"
+    }
+}'
+```
+
 ## Receiving notifications
 
 By default, we send out email notifications to the `ListAgentEmail` for when offer requests are approved to be sent to buyers, and when offers are made on your requests.
