oops lol rotating the agent key now

--- a/broker-quickstart.mdx
+++ b/broker-quickstart.mdx
@@ -109,7 +109,7 @@ Not ready to submit a full request yet? You can also check out how many buyers a
 ```curl
 curl --location 'https://v2.easystreetoffers.com/api/v2/offer-requests/prelim' \
 --header 'Content-Type: application/json' \
---header 'Authorization: eso_altlx0pb8sqy27wdta1aqbh8ta7p0jw4avvoka6geknqhbex32ly62nofprremvu6azrwl3iktry4oyrxn2yng' \
+--header 'Authorization: <api-key>' \
 --data '{
     "inventory": {
         "StateOrProvince": "CA",
