rm beta language

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,9 +1,7 @@
 ---
-title: 'Introduction'
-description: 'Request and manage your cash offers here.'
+title: "Introduction"
+description: "Request and manage your cash offers here."
 ---
-
-
 
 To get started, register an account on our [website](https://v2.easystreetoffers.com/auth/signup). Once completed, [reach out](mailto:tyler@easystreetoffers.com) to us to obtain an API key.
 After signing our API License agreement, you will be able to access our API.
@@ -18,5 +16,6 @@ Check out our [quick start guide](/buyer-quickstart.mdx). If you want to jump ri
 </Card>
 
 <Note>
-  ESO API is currently in beta. If you have any feedback, please [email us](mailto:kevin@easystreetoffers.com).
+  If you have any feedback, please [email
+  us](mailto:kevin@easystreetoffers.com).
 </Note>
