--- a/api-reference/endpoint/patch-offers.mdx
+++ b/api-reference/endpoint/patch-offers.mdx
@@ -2,3 +2,8 @@
 title: "Respond to offer"
 openapi: patch /offers/{offer_id}
 ---
+
+| Status | Description |
+|--------|-------------|
+| accepted | Request to finalize this offer |
+| rejected | Reject this offer |
