--- a/buyer-quickstart.mdx
+++ b/buyer-quickstart.mdx
@@ -128,6 +128,7 @@ Otherwise, if an agent counters your offer, you will receive an `INSERT` webhook
 
 ```json
 {
+  "event": "offer_updated",
   "offer_request_id": 188,
   "offer_id": 235,
   "offer_status": "offer_accepted"
