[UPD] add offer_type field into offer response and description for instant/instant_premier offer_type

--- a/api-reference/endpoint/get-offers.mdx
+++ b/api-reference/endpoint/get-offers.mdx
@@ -16,3 +16,9 @@ openapi: get /offers
 | scheduled | The offer has been scheduled for future review or processing |
 | accepted_another_offer | The party who made this offer has accepted a different offer |
 | expired | The offer has passed its validity period and is no longer active |
+
+
+| Offer Type | Description |
+|--------|-------------|
+| instant | The instant offer generated based the first complete analyst assumptions for the property |
+| instant_premier | The premier offer gennerated based on assumptions from trusted intelligence service |
